--- a/about-us.html
+++ b/about-us.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
 	<meta charset="UTF-8">
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="libs/bootstrap5/bootstrap.min.css">
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
-	<title>Personal cabinet</title>
+	<title>Nature Sleep</title>
 </head>
 
 <body>
@@ -16,9 +16,91 @@
 	<div class="wrapper">
 
 		<header class="header">
-			<div class="container">
-			</div>
-		</header>
+            <div class="container-fluid header-top-con">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <nav class="navbar navbar-expand-lg">
+                                <div class="navbar-city">
+                                    <p>Ваш город</p>
+                                    <a href="#!">Новосбирск</a>
+                                </div>
+                                <div class="navbar-collapse">
+                                    <ul class="navbar-nav">
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="#!">О нас</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="#!">Гарантии</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="#!">Адреса магазинов</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="#!">Партнерам</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="#!">Контакты</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </nav>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="head-assets">
+                    <div class="logo">
+                        <a href="#!"><img src="images/logo.png" alt=""></a>
+                    </div>
+                    <div class="head-search">
+                        <form action="#!">
+                            <input type="text" placeholder="Поиск по сайту">
+                            <button><img src="images/icons/header-search-icon.svg" alt=""></button>
+                        </form>
+                    </div>
+                    <div class="callback">
+                        <a href="#!" class="btn-blue">Заказать звонок</a>
+                    </div>
+                    <div class="numbers">
+                        <a href="tel:8 (963) 944-99-91"><img src="images/icons/phone-icon.svg" alt=""> 8 (963) 944-99-91</a>
+                        <span>c 09:00 до 19:00</span>
+                    </div>
+                    
+                    <div class="head-right">
+                        <div class="favorite">
+                            <a href="#!">
+                                <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M19 33.7929L4.01714 20.2215C-4.12571 12.0786 7.84429 -3.55568 19 9.0929C30.1557 -3.55568 42.0714 12.1329 33.9829 20.2215L19 33.7929Z" stroke="#29ABE2" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>                                    
+                            </a>
+                            <div class="favorite-count">0</div>
+                        </div>
+                        <div class="basket">
+                            <a href="#!">
+                                <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M34.7094 9.19844C34.592 9.05802 34.4453 8.94509 34.2795 8.8676C34.1137 8.79011 33.933 8.74997 33.75 8.75H8.54375L7.77969 4.55312C7.67503 3.97709 7.37153 3.45605 6.92209 3.08085C6.47265 2.70565 5.90578 2.50008 5.32031 2.5H2.5C2.16848 2.5 1.85054 2.6317 1.61612 2.86612C1.3817 3.10054 1.25 3.41848 1.25 3.75C1.25 4.08152 1.3817 4.39946 1.61612 4.63388C1.85054 4.8683 2.16848 5 2.5 5H5.3125L9.30625 26.9203C9.42389 27.5704 9.71119 28.1779 10.1391 28.6812C9.54851 29.2328 9.12226 29.9372 8.90759 30.7163C8.69291 31.4953 8.6982 32.3186 8.92286 33.0948C9.14752 33.871 9.58277 34.5699 10.1804 35.1139C10.7779 35.6578 11.5145 36.0256 12.3084 36.1766C13.1022 36.3275 13.9224 36.2555 14.6779 35.9688C15.4334 35.682 16.0947 35.1916 16.5885 34.552C17.0823 33.9123 17.3893 33.1484 17.4755 32.3449C17.5616 31.5414 17.4235 30.7298 17.0766 30H24.1734C23.8938 30.5854 23.7491 31.2262 23.75 31.875C23.75 32.7403 24.0066 33.5862 24.4873 34.3056C24.9681 35.0251 25.6513 35.5858 26.4508 35.917C27.2502 36.2481 28.1299 36.3347 28.9785 36.1659C29.8272 35.9971 30.6067 35.5804 31.2186 34.9686C31.8304 34.3567 32.2471 33.5772 32.4159 32.7285C32.5847 31.8799 32.4981 31.0002 32.167 30.2008C31.8358 29.4013 31.2751 28.7181 30.5556 28.2373C29.8362 27.7566 28.9903 27.5 28.125 27.5H12.9953C12.7026 27.5 12.4191 27.3972 12.1944 27.2096C11.9697 27.022 11.818 26.7615 11.7656 26.4734L11.2703 23.75H29.3953C30.2735 23.7499 31.1238 23.4415 31.798 22.8787C32.4721 22.3159 32.9274 21.5344 33.0844 20.6703L34.9844 10.2234C35.0165 10.0429 35.0086 9.85745 34.961 9.6803C34.9135 9.50316 34.8276 9.33865 34.7094 9.19844ZM15 31.875C15 32.2458 14.89 32.6084 14.684 32.9167C14.478 33.225 14.1851 33.4654 13.8425 33.6073C13.4999 33.7492 13.1229 33.7863 12.7592 33.714C12.3955 33.6416 12.0614 33.463 11.7992 33.2008C11.537 32.9386 11.3584 32.6045 11.286 32.2408C11.2137 31.8771 11.2508 31.5001 11.3927 31.1575C11.5346 30.8149 11.775 30.522 12.0833 30.316C12.3916 30.11 12.7542 30 13.125 30C13.6223 30 14.0992 30.1975 14.4508 30.5492C14.8025 30.9008 15 31.3777 15 31.875ZM30 31.875C30 32.2458 29.89 32.6084 29.684 32.9167C29.478 33.225 29.1851 33.4654 28.8425 33.6073C28.4999 33.7492 28.1229 33.7863 27.7592 33.714C27.3955 33.6416 27.0614 33.463 26.7992 33.2008C26.5369 32.9386 26.3584 32.6045 26.286 32.2408C26.2137 31.8771 26.2508 31.5001 26.3927 31.1575C26.5346 30.8149 26.775 30.522 27.0833 30.316C27.3916 30.11 27.7542 30 28.125 30C28.6223 30 29.0992 30.1975 29.4508 30.5492C29.8025 30.9008 30 31.3777 30 31.875ZM30.625 20.2234C30.5725 20.5122 30.4201 20.7734 30.1944 20.9611C29.9687 21.1488 29.6842 21.2511 29.3906 21.25H10.8156L8.99844 11.25H32.2516L30.625 20.2234Z" fill="#29ABE2"/>
+                                </svg>                                    
+                            </a>
+                            <div class="basket-count">0</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container-fluid header-links-con">
+                <div class="container">
+                    <div class="header-links">
+                        <a href="#!">Матрасы</a>
+                        <a href="#!">Детские матрасы и аксессуары</a>
+                        <a href="#!">Чехлы и наматрасники</a>
+                        <a href="#!">Подушки и одеяла</a>
+                        <a href="#!">Как выбрать матрас</a>
+                        <a href="#!" class="sale">Акции и скидки</a>
+                    </div>
+                </div>
+            </div>
+        </header>
 
 		<!-- main start -->
 		<main class="main">
@@ -89,9 +171,31 @@
 
 		<!-- footer start -->
 		<footer class="footer">
-			<div class="container">
-			</div>
-		</footer>
+            <div class="container">
+                <div class="ftr-block">
+                    <div class="ftr-logo">
+                        <a href="#!"><img src="images/logo.png" alt=""></a>
+                    </div>
+                    <div class="ftr-menu">
+                        <div class="ftr-menu-links one">
+                            <a href="#!">О нас</a>
+                            <a href="#!">Матрасы</a>
+                            <a href="#!">Гарантии</a>
+                        </div>
+                        <div class="ftr-menu-links two">
+                            <a href="#!">Адреса магазинов</a>
+                            <a href="#!">Партнерам</a>
+                            <a href="#!">Контакты</a>
+                        </div>
+                    </div>
+                    <div class="ftr-number">
+                        <a href="tel:8 (963) 944-99-91" class="ftr-tel"><img src="images/icons/phone-icon.svg" alt=""> 8 (963) 944-99-91</a>
+                        <span>c 09:00 до 19:00</span>
+                        <a href="#!" class="btn-blue">Заказать звонок</a>
+                    </div>
+                </div>
+            </div>
+        </footer>
 		<!-- footer end -->
 
 	</div>
