--- a/index.html
+++ b/index.html
@@ -112,49 +112,58 @@
 
         <!-- main start -->
         <main class="main">
-            <div class="container">
-                <div class="index-block">
-                    <div class="title">
-                        <h1>Анатомические матрасы для отдыха с комфортом</h1>
-                        <p>Подберите для себя матрас индивидуально по выгодной цене
-                            и дизайну на нашем онлайн-конструкторе прямо сейчас!</p>
-                    </div>
-                </div>
-
-                <div class="index-content">
-                    <div class="swiper index-slider">
-                        <div class="swiper-wrapper">
-                            <div class="swiper-slide">
-                                <img src="images/index-slider-img.jpg" alt="">
-                            </div>
-                            <div class="swiper-slide">
-                                <img src="images/index-slider-img.jpg" alt="">
-                            </div>
-                            <div class="swiper-slide">
-                                <img src="images/index-slider-img.jpg" alt="">
-                            </div>
-                            <div class="swiper-slide">
-                                <img src="images/index-slider-img.jpg" alt="">
-                            </div>
-                            <div class="swiper-slide">
-                                <img src="images/index-slider-img.jpg" alt="">
-                            </div>
-                            <div class="swiper-slide">
-                                <img src="images/index-slider-img.jpg" alt="">
-                            </div>
+            <section class="index-sec">
+                <div class="container">
+                    <div class="index-block">
+                        <div class="title">
+                            <h1>Анатомические матрасы для отдыха с комфортом</h1>
+                            <p>Подберите для себя матрас индивидуально по выгодной цене
+                                и дизайну на нашем онлайн-конструкторе прямо сейчас!</p>
                         </div>
-                        <div class="swiper-controller">
+                    </div>
+
+                    <div class="index-content">
+                        <div class="swiper index-slider">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+                                    <img src="images/index-slider-img.jpg" alt="">
+                                </div>
+                                <div class="swiper-slide">
+                                    <img src="images/index-slider-img.jpg" alt="">
+                                </div>
+                                <div class="swiper-slide">
+                                    <img src="images/index-slider-img.jpg" alt="">
+                                </div>
+                                <div class="swiper-slide">
+                                    <img src="images/index-slider-img.jpg" alt="">
+                                </div>
+                                <div class="swiper-slide">
+                                    <img src="images/index-slider-img.jpg" alt="">
+                                </div>
+                                <div class="swiper-slide">
+                                    <img src="images/index-slider-img.jpg" alt="">
+                                </div>
+                            </div>
                             <div class="slider-controller">
                                 <div class="swiper-pagination"></div>
                             </div>
                         </div>
+
+                        <div class="index-catalog-btn">
+                            <a href="#!" class="btn-blue">В каталог</a>
+                        </div>
                     </div>
                 </div>
-            </div>
+            </section>
 
             <!-- prodcut-slider start -->
             <section class="prodcut-slider">
                 <div class="container position-relative">
+                    <div class="row">
+                        <div class="col-lg-12 title">
+                            <h1>Популярные товары</h1>
+                        </div>
+                    </div>
 
                     <div class="swiper mySwiper3">
                         <div class="swiper-wrapper">
@@ -348,6 +357,27 @@
                 </div>
             </section>
             <!-- prodcut-slider end -->
+
+            <section class="index-tab">
+                <div class="container">
+                    <div class="tab-block">
+                        <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+                            <li class="nav-item" role="presentation">
+                                <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Стандартный</button>
+                            </li>
+                            <li class="nav-item" role="presentation">
+                                <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Заказной размер</button>
+                            </li>
+
+                            <a href="#!" class="how-it-works">Как это работает?</a>
+                        </ul>
+                        <div class="tab-content" id="pills-tabContent">
+                            <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">...</div>
+                            <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">...</div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
         <!-- main end -->
 
