--- a/index.html
+++ b/index.html
@@ -156,7 +156,6 @@
                 </div>
             </section>
 
-            <!-- prodcut-slider start -->
             <section class="prodcut-slider">
                 <div class="container position-relative">
                     <div class="row">
@@ -356,12 +355,11 @@
                     </div>
                 </div>
             </section>
-            <!-- prodcut-slider end -->
 
             <section class="index-tab">
                 <div class="container">
                     <div class="tab-block">
-                        <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+                        <ul class="nav nav-pills" id="pills-tab" role="tablist">
                             <li class="nav-item" role="presentation">
                                 <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Стандартный</button>
                             </li>
@@ -372,9 +370,227 @@
                             <a href="#!" class="how-it-works">Как это работает?</a>
                         </ul>
                         <div class="tab-content" id="pills-tabContent">
-                            <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">...</div>
+                            <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
+                                <div class="index-tab-block">
+                                    <div class="tab-size">
+                                        <p><img src="images/icons/ruler-icon.svg" alt=""> Задайте размер</p>
+                                        
+                                        <div class="size-in">
+                                            <div class="product-size__box">
+                                                <div class="select-menu">
+                                                    <div class="select">
+                                                        <span>80</span>
+                                                        <svg class="down-arrow" width="12" height="7" viewBox="0 0 12 7"
+                                                            fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                                                d="M1.58909 0.244078C1.26366 -0.0813592 0.736018 -0.0813592 0.410582 0.244078C0.0851447 0.569515 0.0851447 1.09715 0.410582 1.42259L5.41058 6.42259C5.73602 6.74803 6.26366 6.74803 6.58909 6.42259L11.5891 1.42259C11.9145 1.09715 11.9145 0.569515 11.5891 0.244078C11.2637 -0.0813592 10.736 -0.0813592 10.4106 0.244078L5.99984 4.65482L1.58909 0.244078Z"
+                                                                fill="#29ABE2">
+                                                        </svg>
+                                                    </div>
+                                                    <div class="options-list">
+                                                        <div class="option">80</div>
+                                                        <div class="option">90</div>
+                                                        <div class="option">120</div>
+                                                        <div class="option">140</div>
+                                                        <div class="option">160</div>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                            <div class="x">x</div>
+
+                                            <div class="product-size__box">
+                                                <div class="select-menu">
+                                                    <div class="select">
+                                                        <span>190</span>
+                                                        <svg class="down-arrow" width="12" height="7" viewBox="0 0 12 7"
+                                                            fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                                                d="M1.58909 0.244078C1.26366 -0.0813592 0.736018 -0.0813592 0.410582 0.244078C0.0851447 0.569515 0.0851447 1.09715 0.410582 1.42259L5.41058 6.42259C5.73602 6.74803 6.26366 6.74803 6.58909 6.42259L11.5891 1.42259C11.9145 1.09715 11.9145 0.569515 11.5891 0.244078C11.2637 -0.0813592 10.736 -0.0813592 10.4106 0.244078L5.99984 4.65482L1.58909 0.244078Z"
+                                                                fill="#29ABE2">
+                                                        </svg>
+                                                    </div>
+                                                    <div class="options-list">
+                                                        <div class="option">190</div>
+                                                        <div class="option">200</div>
+                                                        <div class="option">210</div>
+                                                        <div class="option">220</div>
+                                                        <div class="option">230</div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="row">
+                                        <div class="col-lg-7">
+                                            <div class="tab-layer">
+                                                <p><img src="images/icons/layers-icon.svg" alt=""> Выберите состав матраса</p>
+                                            </div>
+
+                                            <div class="tab-btns">
+                                                <a href="#!" class="add-layer">Добавить слой <span>+</span></a>
+                                                <a href="#!" class="clear-all">Сбросить все <span>x</span></a>
+                                            </div>
+                                        </div>
+
+                                        <div class="col-lg-4">
+                                            <div class="visual-layers">
+                                                <p>Визуализация слоев матраса</p>
+                                            </div>
+                                            <div class="visual-layers-size">
+                                                <div class="visual-empty"></div>
+                                                <div class="visual-size-in">
+                                                    <span>
+                                                        <svg width="7" height="77" viewBox="0 0 7 77" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                            <path d="M3.16392 0.147389C3.34953 -0.0491297 3.65046 -0.0491297 3.83608 0.147389L6.86079 3.3499C7.0464 3.54642 7.0464 3.86504 6.86079 4.06157C6.67517 4.25809 6.37424 4.25809 6.18863 4.06157L3.5 1.2149L0.811371 4.06157C0.625756 4.25809 0.32482 4.25809 0.139208 4.06157C-0.0464028 3.86504 -0.0464028 3.54642 0.139208 3.3499L3.16392 0.147389ZM3.02471 78V0.503224H3.97528V78H3.02471Z" fill="#0D1E25"/>
+                                                        </svg>                                                        
+                                                    </span>
+                                                    <span class="size-number">0см</span>
+                                                    <span>
+                                                        <svg width="7" height="78" viewBox="0 0 7 78" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                            <path d="M3.16392 77.8527C3.34953 78.0491 3.65046 78.0491 3.83608 77.8527L6.86079 74.6501C7.0464 74.4536 7.0464 74.1349 6.86079 73.9385C6.67517 73.7419 6.37424 73.7419 6.18863 73.9385L3.5 76.7851L0.811371 73.9385C0.625756 73.7419 0.32482 73.7419 0.139208 73.9385C-0.0464028 74.1349 -0.0464028 74.4536 0.139208 74.6501L3.16392 77.8527ZM3.02471 4.39934e-08V77.4968H3.97528V0L3.02471 4.39934e-08Z" fill="#0D1E25"/>
+                                                        </svg>                                                        
+                                                    </span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="total-price">
+                                        <p>Итоговая цена:</p>
+                                        <span>0 <img src="images/icons/money.svg" alt=""></span>
+                                    </div>
+                                </div>
+                            </div>
                             <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">...</div>
                         </div>
+
+                        <div class="index-tab-btn">
+                            <a href="#!" class="btn-blue">Заказать</a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="our-advabtages">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-12 title">
+                            <h1>Наши преимущества</h1>
+                            <p>Изготовление матрасов любого размера и любой формы, изготовление матрасов в сжатые сроки и не забываем про высокое качество и доступные цены!</p>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <div class="advan-block">
+                                <div class="advan-img">
+                                    <img src="images/icons/our-advantages-icon1.svg" alt="">
+                                </div>
+                                <div class="advan-text">
+                                    <p>Экологичность</p>
+                                    <span>Произведено в Сибири <br> по честной цене</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="advan-block">
+                                <div class="advan-img">
+                                    <img src="images/icons/our-advantages-icon2.svg" alt="">
+                                </div>
+                                <div class="advan-text">
+                                    <p>Качество</p>
+                                    <span>Лучшие комплектующие <br> из России и мира</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="advan-block">
+                                <div class="advan-img">
+                                    <img src="images/icons/our-advantages-icon3.svg" alt="">
+                                </div>
+                                <div class="advan-text">
+                                    <p>Любая сложность</p>
+                                    <span>Любые размеры <br> и форма за 3 дня</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="advan-block">
+                                <div class="advan-img">
+                                    <img src="images/icons/our-advantages-icon4.svg" alt="">
+                                </div>
+                                <div class="advan-text">
+                                    <p>Гарантия</p>
+                                    <span>Гарантия 24 месяца</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="sale-sec">
+                <div class="container position-relative">
+                    <div class="row">
+                        <div class="col-lg-12 title">
+                            <h1>Специальные предложения и акции</h1>
+                        </div>
+                    </div>
+
+                    <div class="swiper mySwiper4">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <div class="slide-img">
+                                    <img src="images/product-img1.png" alt="">
+                                </div>
+                                <div class="slide-block">
+                                    <p>Скидка 15% в День рождения</p>
+                                    <a href="#!">Подробнее</a>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="slide-img">
+                                    <img src="images/product-img1.png" alt="">
+                                </div>
+                                <div class="slide-block">
+                                    <p>Скидка 15% в День рождения</p>
+                                    <a href="#!">Подробнее</a>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="slide-img">
+                                    <img src="images/product-img1.png" alt="">
+                                </div>
+                                <div class="slide-block">
+                                    <p>Скидка 15% в День рождения</p>
+                                    <a href="#!">Подробнее</a>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="slide-img">
+                                    <img src="images/product-img1.png" alt="">
+                                </div>
+                                <div class="slide-block">
+                                    <p>Скидка 15% в День рождения</p>
+                                    <a href="#!">Подробнее</a>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="slide-img">
+                                    <img src="images/product-img1.png" alt="">
+                                </div>
+                                <div class="slide-block">
+                                    <p>Скидка 15% в День рождения</p>
+                                    <a href="#!">Подробнее</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="d-flex align-items-center slide-arrow">
+                        <div class="swiper-button-next swiper-button-next2"></div>
+                        <div class="swiper-button-prev swiper-button-prev2"></div>
                     </div>
                 </div>
             </section>
